# youtube-niche-scanner

./: .env.example  .gitignore  AUDIT.md  CREATIVE_AUDIT.md  Dockerfile  PERFORMANCE.md  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
app/: __init__.py  cli.py
app/ai/: __init__.py  client.py  service.py
app/api/: __init__.py  routes.py
app/competition_analysis/: __init__.py  engine.py
app/compilation_engine/: __init__.py  engine.py  schemas.py
app/config/: __init__.py  settings.py
app/connectors/: __init__.py  base.py  google_trends.py  keyword_scraper.py  reddit.py  youtube_api.py  youtube_autocomplete.py  youtube_search.py
app/core/: __init__.py  cache.py  logging.py  models.py  pipeline.py
app/ctr_prediction/: __init__.py  engine.py
app/database/: __init__.py  models.py  persistence.py
app/description_generation/: __init__.py  engine.py
app/discovery_engine/: __init__.py  engine.py
app/faceless_viability/: __init__.py  engine.py
app/keyword_expansion/: __init__.py  engine.py
app/monetization_engine/: __init__.py  engine.py
app/niche_clustering/: __init__.py  engine.py
app/ranking_engine/: __init__.py  engine.py
app/ui/: app.py  (+7 more)
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
scripts/: benchmark.py  run_tests.sh  setup.sh
tests/: test_ai.py  test_cache.py  test_compilation.py  test_config.py  test_database.py  test_engines.py  test_models.py  test_new_engines.py  test_reports.py  test_stabilization_fixes.py  test_strategy.py  test_video_factory.py  test_video_processing.py
(+97 files in other folders)
